template/templates/mathany/css/modules.css
.moduletable { }

/* menu (horizontal) */
.moduletable_hmenu {
	position: absolute;
	right: 0;
	top: -4px;
}
.moduletable_hmenu ul {
	font-size: 14px;
	list-style: none;
}
.moduletable_hmenu li {
	float: left;
	margin: 0 15px;
	position: relative;
	text-align: center;
	z-index: 3;
}
.moduletable_hmenu li > a,
.moduletable_hmenu li > span {
	color: black;
	display: block;
	text-decoration: none;
}
.moduletable_hmenu li > a > span, 
.moduletable_hmenu li > span > span {
	display: block;
	padding-top: 50px;
}

/* hover */
.moduletable_hmenu li:hover { margin: 0 auto; }
.moduletable_hmenu li:hover > a,
.moduletable_hmenu li:hover > span { 
	background: url(../images/mainmenuhover.png) left top no-repeat; 
	padding-left: 7px;
}
.moduletable_hmenu li:hover > a > span,
.moduletable_hmenu li:hover > span > span {
	background: url(../images/mainmenuhover.png) right -93px no-repeat;
	padding-right: 7px;
	padding-bottom: 24px;
}
.moduletable_hmenu li.parent:hover > a, 
.moduletable_hmenu li.parent:hover > span {
	background: url(../images/menu_hover_bg_l.png) left top no-repeat;
	padding-left: 5px;
}
.moduletable_hmenu li.parent:hover > a > span, 
.moduletable_hmenu li.parent:hover > span > span {
	background: url(../images/menu_hover_bg_l.png) -152px right no-repeat;
	padding: 50px 10px 13px; /* fixme 5+10 */
}
.moduletable_hmenu .content {
	background: url(../images/menu_dropdown_bg_l.png) bottom right no-repeat;	
	position: relative;
}
.moduletable_hmenu .top {
	background: url(../images/menu_dropdown_bg_l.png) top left no-repeat;
	height: 100%;
	margin-left: -7px; /* fixme */
	position: absolute;
}
.moduletable_hmenu .bottom {
	background: url(../images/menu_dropdown_bg_l.png) bottom right no-repeat; 	
	position: relative;
	width: 100%;
}
.moduletable_hmenu .bottom div {
	background: url(../images/menu_dropdown_bg_l.png) bottom right no-repeat;
	margin-left: -7px; /* fixme */
	position: relative;
	
}

/* submenu */
.moduletable_hmenu .submenu { 
	display: none;
	position: absolute;
	left: 0;
	top: 69px;
	white-space: nowrap;
	z-index: -1;
}
.moduletable_hmenu li:hover .submenu { display: block; }
.moduletable_hmenu li.item5 .submenu { /* FIXME Jon needs to make .last work */
	left: auto;
	right: 0;
}
.moduletable_hmenu .submenu {
	padding-left: 0px; /* fixme */
}

.moduletable_hmenu ul ul {
	display: none;
}
.moduletable_hmenu ul li:hover ul {
	display: block;
}
.moduletable_hmenu .submenu li {
	float: none;
	text-align: left;
}
/* end hmenu */

/* menu (vertical) */
.moduletable_vmenu { }

/* end vmenu */

.moduletable h3 {
	background: url(../images/circlecheckmark.png) no-repeat;
	line-height: 26px;
	padding-top: 5px;
}

/* bottom modules */
#bottom .moduletable { float: left; padding: 0 0 0 34px; width: 292px; }
#bottom .moduletable:first-child { padding: 0; }
#bottom .moduletable { }
#bottom .moduletable ul { list-style-type: none; }
#bottom .moduletable li { background: url(../images/checkmark.png) no-repeat; padding-left: 26px; }
/* end bottom modules */

/* sidebar menu */
#sidebar .moduletable { }
#sidebar .moduletable ul { list-style: none; text-transform: uppercase; }

#sidebar .moduletable li { 
	display: block;
	padding-bottom: 6px;
} 
#sidebar .moduletable li:hover { }

#sidebar .moduletable li > a, 
#sidebar .moduletable li > span { 
	display: block;
	padding-left: 5px;
}
#sidebar .moduletable li > a > span, 
#sidebar .moduletable li > span > span {
	color: black;
	display: block;
	line-height: 20px;
	padding-right: 5px;
	text-decoration: none;
}

#sidebar .moduletable li:hover > a, 
#sidebar .moduletable li:hover > span { 
	background: url(../images/innermenuhover.png) left top no-repeat;
}
#sidebar .moduletable li:hover a > span,
#sidebar .moduletable li:hover > span > span {
	background: url(../images/innermenuhover.png) right bottom no-repeat;
	color: white;
}

/* end sidebar menu */

